# Trishul

./: CMakeLists.txt  LICENSE  README.md  build.sh
Docs/: roadmap.md
Drivers/STM32F401RE/Inc/: trishul_uart_stm32f401re.h
Drivers/STM32F401RE/Src/: trishul_uart_stm32f401re.c
Examples/STM32F401_Blinky/: CMakeLists.txt  main.c  startup_stm32f401xe.s  stm32f401_blinky.ld.in
Kernal/Inc/: trishul.h  trishul_config.h  trishul_internal.h  trishul_types.h  trishul_uart.h
Kernal/Src/: trishul.c  trishul_uart.c
Port/ARM_Cortex_M4/: port.c  port.h  portasm.s
cmake/: arm-clang.cmake  arm-none-eabi-gcc.cmake
